--- a/ansible_collections/arista/avd/molecule/deploy_to_cv/converge.yml
+++ b/ansible_collections/arista/avd/molecule/deploy_to_cv/converge.yml
@@ -4,20 +4,24 @@
   connection: local
   gather_facts: false
   vars:
-    cv_server: staticstudio-1-cfec4cc2-eos.topo.testdrive.arista.com
-    token: "{{ lookup('file', '/Users/sugethakch/work/AVD/claus_AVD/ansible-avd/ansible_collections/arista/avd/molecule/deploy_to_cv/token.tok')}}"
-    url: https://{{ cvp }}/api/resources/studio/v1/StudioConfig?key.studioId=studio-static-configlet&key.workspaceId=avd-static-studios-1
+    # cv_server: staticstudio-1-cfec4cc2-eos.topo.testdrive.arista.com
+    cv_server: www.cv-staging.corp.arista.io
+    token: "{{ lookup('file', '/Users/sugethakch/work/AVD/claus_AVD/ansible-avd/ansible_collections/arista/avd/molecule/deploy_to_cv/token-cvaas.tok')}}"
+    # url: https://{{ cv_server }}/api/resources/workspace/v1/WorkspaceBuildDetails/all
+    url: https://{{ cv_server }}/api/v3/services/arista.configlet.v1.ConfigletService/GetOne
     # url: "https://{{ cvp }}/api/resources/studio/v1/StudioConfig?key.studioId=studio-static-configlet&key.workspaceId="
+    configuration_dir: "/Users/sugethakch/work/AVD/claus_AVD/ansible-avd/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/configs"
+    structured_config_dir: "/Users/sugethakch/work/AVD/claus_AVD/ansible-avd/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/structured_configs"
 
-    ws_name: avd-static-studios-6
+    ws_name: avd-static-studios-2
     ws_description: sample description
     ws_req_state: submitted
     ws_force: true
 
     # TODO: cc_id is not getting set to anything other than Workspace-<ws_nane>
-    cc_id: Workspace-avd-static-studios-6
+    cc_id: Workspace-avd-static-studios-2
     cc_requested_state: approved
-    cc_name: cc_avd_studios-6
+    cc_name: cc_avd_studios-2
     cc_desctiption: sample description
 
   tasks:
@@ -72,29 +76,42 @@
           - CVP_RESULTS.change_control.description == cc_desctiption
           # configs
           # errors and warnings
-          - CVP_RESULTS.errros == []
+          - CVP_RESULTS.errors == []
 
-    # - name: get workspace information
-    #   delegate_to: localhost
-    #   run_once: true
-    #   # hosts: localhost
-    #   ansible.builtin.uri:
-    #     url: "https://{{ cv_server }}/api/resources/workspace/v1/WorkspaceConfig?key.workspaceId=avd-static-studios-8"
-    #     # url: "https://{{ cvp }}/api/resources/studio/v1/StudioConfig?key.studioId=studio-static-configlet&key.workspaceId="
-    #     return_content: true
-    #     validate_certs: false
-    #     headers:
-    #       Cookie: "access_token={{ token }}"
-    #     method: GET
-    #     body_format: json
-    #   register: result
+    - name: get workspace information
+      delegate_to: localhost
+      run_once: true
+      # hosts: localhost
+      ansible.builtin.uri:
+        url: '{{ url }}'
+        # url: "https://{{ cvp }}/api/resources/studio/v1/StudioConfig?key.studioId=studio-static-configlet&key.workspaceId="
+        return_content: true
+        validate_certs: false
+        headers:
+          Cookie: "access_token={{ token }}"
+        method: POST
+        body_format: json
+        body:  {
+          "key": {
+          "workspace_id": "",
+          "configlet_id": "avd-s1-leaf1"
+          }
+        }
+      register: result
 
-    - name: 'Display GET result'
+    - name: 'register facts'
+      run_once: true
+      set_fact:
+        response_configlet: '{{result.json[0].value.body }}'
+        request_configlet: "{{ lookup('file', '/Users/sugethakch/work/AVD/claus_AVD/ansible-avd/ansible_collections/arista/avd/molecule/deploy_to_cv/intended/configs/s1-leaf1.cfg')}}"
+
+    - name: 'print configlet body'
       run_once: true
       debug:
-        msg: '{{result.json.value.displayName}}'
+        msg: '{{ response_configlet }}'
 
-    # - name: check result
-    #   ansible.builtin.assert:
-    #     that:
-    #       - result.json.value.displayName == avd-static-studios-8
+    - name: check configlets
+      ansible.builtin.assert:
+        that:
+          # workspace
+          - response_configlet == request_configlet
